[gd_scene load_steps=6 format=3 uid="uid://cu0o5wah75qq0"]

[ext_resource type="Script" path="res://scripts/MainMenu.gd" id="1_menu"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bg"]
bg_color = Color(0.05, 0.04, 0.08, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_button"]
bg_color = Color(0.15, 0.12, 0.22, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.6, 0.5, 0.3, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
shadow_color = Color(0, 0, 0, 0.4)
shadow_size = 4
shadow_offset = Vector2(2, 3)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_button_hover"]
bg_color = Color(0.25, 0.2, 0.35, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.9, 0.75, 0.4, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
shadow_color = Color(0.9, 0.75, 0.4, 0.3)
shadow_size = 8
shadow_offset = Vector2(0, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_button_pressed"]
bg_color = Color(0.1, 0.08, 0.15, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.5, 0.4, 0.25, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_menu")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.05, 0.04, 0.08, 1)

[node name="ParticleLayer" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 40

[node name="Spacer" type="Control" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.8

[node name="TitleContainer" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="TitleLabel" type="Label" parent="VBoxContainer/TitleContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.95, 0.85, 0.6, 1)
theme_override_colors/font_outline_color = Color(0.1, 0.05, 0.15, 1)
theme_override_constants/outline_size = 8
theme_override_font_sizes/font_size = 72
text = "SHATTERED TOWERS"
horizontal_alignment = 1

[node name="SubtitleLabel" type="Label" parent="VBoxContainer/TitleContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.7, 0.6, 0.8, 1)
theme_override_font_sizes/font_size = 18
text = "A tale of hope and despair"
horizontal_alignment = 1

[node name="Spacer2" type="Control" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.5

[node name="CenterContainer" type="CenterContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="ButtonContainer" type="VBoxContainer" parent="VBoxContainer/CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="StartButton" type="Button" parent="VBoxContainer/CenterContainer/ButtonContainer"]
custom_minimum_size = Vector2(250, 55)
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0.95, 0.9, 0.8, 1)
theme_override_colors/font_hover_color = Color(1, 0.95, 0.7, 1)
theme_override_colors/font_pressed_color = Color(0.7, 0.65, 0.55, 1)
theme_override_font_sizes/font_size = 22
theme_override_styles/normal = SubResource("StyleBoxFlat_button")
theme_override_styles/hover = SubResource("StyleBoxFlat_button_hover")
theme_override_styles/pressed = SubResource("StyleBoxFlat_button_pressed")
text = "New Game"

[node name="LoadButton" type="Button" parent="VBoxContainer/CenterContainer/ButtonContainer"]
custom_minimum_size = Vector2(250, 55)
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0.95, 0.9, 0.8, 1)
theme_override_colors/font_hover_color = Color(1, 0.95, 0.7, 1)
theme_override_colors/font_pressed_color = Color(0.7, 0.65, 0.55, 1)
theme_override_font_sizes/font_size = 22
theme_override_styles/normal = SubResource("StyleBoxFlat_button")
theme_override_styles/hover = SubResource("StyleBoxFlat_button_hover")
theme_override_styles/pressed = SubResource("StyleBoxFlat_button_pressed")
text = "Load Game"

[node name="OptionsButton" type="Button" parent="VBoxContainer/CenterContainer/ButtonContainer"]
custom_minimum_size = Vector2(250, 55)
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0.95, 0.9, 0.8, 1)
theme_override_colors/font_hover_color = Color(1, 0.95, 0.7, 1)
theme_override_colors/font_pressed_color = Color(0.7, 0.65, 0.55, 1)
theme_override_font_sizes/font_size = 22
theme_override_styles/normal = SubResource("StyleBoxFlat_button")
theme_override_styles/hover = SubResource("StyleBoxFlat_button_hover")
theme_override_styles/pressed = SubResource("StyleBoxFlat_button_pressed")
text = "Options"

[node name="QuitButton" type="Button" parent="VBoxContainer/CenterContainer/ButtonContainer"]
custom_minimum_size = Vector2(250, 55)
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0.95, 0.9, 0.8, 1)
theme_override_colors/font_hover_color = Color(1, 0.95, 0.7, 1)
theme_override_colors/font_pressed_color = Color(0.7, 0.65, 0.55, 1)
theme_override_font_sizes/font_size = 22
theme_override_styles/normal = SubResource("StyleBoxFlat_button")
theme_override_styles/hover = SubResource("StyleBoxFlat_button_hover")
theme_override_styles/pressed = SubResource("StyleBoxFlat_button_pressed")
text = "Quit"

[node name="Spacer3" type="Control" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Footer" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.4, 0.35, 0.5, 1)
theme_override_font_sizes/font_size = 12
text = "Â© 2025 Shattered Towers"
horizontal_alignment = 1

[node name="FadeRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 0)
